# pvtracker

./: .gitignore  Cargo.toml  Dockerfile  README.md
chart/pvtracker/: values.yaml
chart/pvtracker/templates/: clusterrole.yaml  deployment.yaml
config/crd/: tracker.cndev.nl.yaml
config/manager/: operator.yaml
config/operator/chart/: Chart.yaml  values.yaml
config/operator/chart/templates/: clusterrolebinding.yaml  deployment.yaml
config/samples/: test-pv.yaml  tracker-example.yaml  tracker2-example.yaml
src/: crd.rs  finalizer.rs  lib.rs  main.rs  resource.rs  status.rs  utils.rs
tests/: tracker_tests.rs
