[package]
name = "pvtracker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
tokio-stream = { version = "0.1.17", features = ["fs"] }
kube = { version = "1.1.0", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_33"] }
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
schemars = "0.8"
garde = { version = "0.16.1", default-features = false, features = ["derive"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0"
thiserror = "1"    # Custom Error definitions and convenient error mappings
chrono = "0.4"
kube-runtime = "1.1.0"
async-trait = "0.1.88"
